# md-snakeoil

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  run-tests.yml
md_snakeoil/: apply.py  cli.py
tests/: indentation.md  test_cli.py  test_formatter.py
tests/examples/: test.md
